# Stremet-Hackathon

./: .gitignore  README.md  STREMET_DEMO_DATA.md  models.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  views.py  ~$w Microsoft Word Document.docx
.github/workflows/: ci.yml
docs/: New-process diagram.drawio  New-process diagram.xml  Requirements.docx
my_django_setup/myproject/: conftest.py  db.sqlite3
my_django_setup/myproject/customer/: models.py  urls.py  views.py
my_django_setup/myproject/designer/: admin.py  forms.py  models.py  urls.py  views.py
my_django_setup/myproject/designer/migrations/: 0001_initial.py  0002_manufacturingstep_execution_fields.py  0003_warehouse_step_and_bom.py
my_django_setup/myproject/designer/services/: __init__.py  graph.py  plans.py  warehouse_sync.py
my_django_setup/myproject/designer/tests/: test_graph.py
my_django_setup/myproject/home/: admin.py  apps.py  auth_utils.py  context_processors.py  gpt4all_service.py  models.py  permissions.py  services.py  urls.py  views.py
my_django_setup/myproject/home/migrations/: 0002_orderitem.py  0003_userprofile.py  0004_alter_userprofile_role.py  0005_chatmessage_attachment_chatmessage_step_context.py  0006_alter_userprofile_role.py  (+1 more)
my_django_setup/myproject/manufacturer/: forms.py  models.py  services.py  urls.py  views.py
my_django_setup/myproject/myproject/: settings.py  urls.py
my_django_setup/myproject/warehouse/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
scripts/: stremet_pitch_tour.py  stremet_ui_tour.py
(+53 files in other folders)
